<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg">
    <RelativeLayout android:id="@+id/title_mrtx"
            android:layout_width="fill_parent"
            android:layout_height="30.0dip"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >
 
            <TextView
                android:id="@+id/set_stationName"
                android:layout_width="200dip"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="5dip"
	            android:textColor="@color/black"
	            android:ellipsize="marquee"
	            android:focusable="true"
	            android:singleLine="true"
	            android:marqueeRepeatLimit="marquee_forever"
	            android:focusableInTouchMode="true"
	            android:scrollHorizontally="true"
	            android:textSize="16dip"
              />
		<View  
     		android:layout_width="1dip" 
    		android:layout_height="match_parent"
     		android:background="#06a026"
     		android:layout_alignParentRight="true"
            android:layout_marginRight="105dip"
     		android:layout_gravity="center_horizontal"
     	/>
            <TextView
                android:id="@+id/mrtx"
                android:layout_width="100dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:text="@string/meiritixing"
                android:textColor="@color/black"
                android:textSize="15dip" />
            
        </RelativeLayout>
         <View  
            android:layout_height="3px" 
            android:layout_width="match_parent"
            android:background="#06a026" 
            android:layout_marginTop="5dip"
        />
        <LinearLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dip"
                android:layout_marginLeft="10dip"
                android:orientation="vertical">
            
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kqsz"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20dip"
                android:background="@drawable/textbg1"/>
            <LinearLayout android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:textColor="@color/black1"
                	android:text="@string/shifoukaiqi"/>
	            <com.mobile.publiclass.SlipButton android:id="@+id/slipBtn"
	                android:layout_marginTop="8dip"
	                android:layout_marginLeft="10dip"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            
		        /> 
            </LinearLayout>    
        </LinearLayout>
        <LinearLayout android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="10dip"
                android:orientation="vertical">
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shijianshezhi"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="20dip"
                android:background="@drawable/textbg1"/>
            <LinearLayout android:layout_width="wrap_content"
                android:layout_height="40dip"
                android:layout_marginTop="5dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView android:layout_width="wrap_content"
                	android:layout_height="wrap_content"
                	android:textColor="@color/black1"
                	android:text="@string/meirifasongshijian"/>
                <TextView android:id="@+id/mrtxtime"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:layout_marginLeft="5dip"
                    android:textSize="12dip"
                    android:background="@drawable/edittext_bg"
                    android:layout_height="wrap_content"/>
	            
            </LinearLayout>    
        </LinearLayout>
        <RelativeLayout android:layout_width="fill_parent"
                android:layout_height="150dip"
                android:layout_marginTop="5dip"
                android:layout_marginLeft="10dip"
                android:gravity="center_horizontal"
                android:orientation="vertical">
            <TextView android:id="@+id/telstring"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fasongdianhua"
                android:textColor="@color/black"
                android:gravity="center"
                android:textSize="18dip"
                android:background="@drawable/textbg1"/>
            
            <com.mobile.publiclass.CornerListView 
                android:id="@+id/listview1"
	            android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/telstring"
		        android:layout_marginTop="5dip"
		        android:layout_marginLeft="15dp"
		        android:layout_marginRight="15dp"
		        android:background="@drawable/shape_bg_listview"
		        android:cacheColorHint="@null"
	        />
                
        </RelativeLayout>
        <Button android:id="@+id/addtel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:text="@string/addtel"
            android:background="@drawable/addtel_button_style"
            android:layout_gravity="center"/>
        
        <LinearLayout android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:gravity="center"
         >
            <Button android:id="@+id/setbutton_mrtx"
                android:layout_width="70dip"
                android:layout_height="30dip"
                android:textSize="20dip"
                android:text="@string/set_system"
                android:background="@drawable/set_button_style"
                />
            <Button android:id="@+id/canclebutton_mrtx"
                android:layout_width="70dip"
                android:layout_height="30dip"
                android:textSize="20dip"
                android:layout_marginLeft="30dip"
                android:background="@drawable/cancle_button_style"
                android:text="@string/cancle"
                />
            
        </LinearLayout>
    

</LinearLayout>
