<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_m"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/warntitle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30.0dip"
            android:background="@drawable/skinpic_green"
            android:gravity="center_vertical"
            
            android:orientation="horizontal" >
 
            <TextView
                android:id="@+id/set_stationName"
                android:layout_width="80dip"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:textColor="@color/white2"
	            android:ellipsize="marquee"
	            android:focusable="true"
	            android:singleLine="true"
	            android:marqueeRepeatLimit="marquee_forever"
	            android:focusableInTouchMode="true"
	            android:scrollHorizontally="true"
                android:layout_weight="0.6"/>
            <TextView android:id="@+id/set_leasttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_marginLeft="40dip"
                android:text=""
                android:focusable="true"
	            android:ellipsize="marquee"
	            android:marqueeRepeatLimit="marquee_forever"
	            android:focusableInTouchMode="true"
	            android:scrollHorizontally="true"
	            android:textColor="@color/white2"
	            android:layout_weight="0.4"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/title_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/info_panel_bg"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="80dip"
                android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"              
                android:gravity="center"
                android:layout_marginBottom="5dip"
                android:text="@string/chuanganqi"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:id="@+id/new_datas"
                android:layout_width="80dip"
                 android:layout_weight="0.25"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5dip"
                android:gravity="center"
                android:text="@string/least_values"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_weight="0.2"
                android:layout_marginBottom="5dip"
                android:gravity="center"
                android:text="@string/xxz"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />
            <TextView
                android:layout_width="10dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_weight="0.1"
                android:layout_marginBottom="5dip"
                android:gravity="center"
                android:text=""
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />

            <TextView
                android:layout_width="80dip"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:layout_marginBottom="5dip"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="@string/sxz"
                android:textColor="@android:color/black"
                android:textSize="18.0sp" />
        </LinearLayout>
    </LinearLayout>

   

    <ScrollView
        android:id="@+id/scrollview"
        android:focusable="true"
        android:layout_below="@+id/warntitle"
        android:focusableInTouchMode="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        
        <LinearLayout
            android:id="@+id/scrolllayout"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true" >

             <ListView
                 android:id="@+id/info_listview"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" >

             </ListView>
            <LinearLayout
                android:id="@+id/others"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/info_listview"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical" >

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:background="@drawable/shape_line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="50.0dip"
                    android:background="@drawable/shape_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        
                        android:layout_marginLeft="3.0dip"
                        android:text="@string/bjtel"
                        android:textColor="@android:color/black"
                        android:textSize="18.0sp" />

                     <TextView 
                        android:id="@+id/mautoTx"
                        
				        android:layout_width="120dip"
				        android:layout_marginLeft="10dip"
				        android:layout_height="wrap_content"
				        android:background="@drawable/editview1_p"
				        
				        android:singleLine="true"
				        android:ellipsize="marquee"
				        android:marqueeRepeatLimit="marquee_forever"
				        android:focusableInTouchMode="true"
				        android:scrollHorizontally="true"/>
                    
                   
                    <Button android:id="@+id/deletetel"
                        android:paddingTop="8.0dip"
                        android:paddingBottom="8.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/delete"
                        android:textColor="@color/green2"
                        android:background="@drawable/bkuang"/>
                    <Button android:id="@+id/addtel"
                        android:paddingTop="8.0dip"
                        android:text="@string/add"
                        android:textColor="@color/green2"
                        android:paddingBottom="8.0dip"
                        android:layout_marginRight="5dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bkuang"/>
                </LinearLayout>
                
                
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:background="@drawable/shape_line" />
                
                
                <LinearLayout  android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/shape_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                     <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setbjtime"
                        android:layout_marginLeft="3.0dip"
                        android:textColor="@color/black"
                        android:textSize="18.0sp" />
                     <RadioGroup
                        android:id="@+id/myradiogroup3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radiobutton5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"
                            android:textColor="@color/black"
                            android:textSize="12.0sp" />

                        <RadioButton
                            android:id="@+id/radiobutton6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no"
                            android:textColor="@color/black"
                            android:textSize="12.0sp" />
                    </RadioGroup>
                    <TextView android:id="@+id/setting_time"
                        android:layout_width="120dip"
                        android:layout_height="wrap_content"
                        android:gravity="center"/>
                    
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:background="@drawable/shape_line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/shape_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qybjsz"
                        android:layout_marginLeft="3.0dip"
                        android:textColor="@color/black"
                        android:textSize="18.0sp" />

                    <RadioGroup
                        android:id="@+id/myradiogroup1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radiobutton1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"
                            android:textColor="@color/black"
                            android:textSize="12.0sp" />

                        <RadioButton
                            android:id="@+id/radiobutton2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no"
                            android:textColor="@color/black"
                            android:textSize="12.0sp" />
                    </RadioGroup>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:background="@drawable/shape_line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_bg"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/qyksbj"
                        android:layout_marginLeft="3.0dip"
                        android:textColor="@color/black"
                        android:textSize="18.0sp" />

                    <RadioGroup
                        android:id="@+id/myradiogroup2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radiobutton3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"
                            android:textColor="@color/black"
                            android:textSize="12.0sp" />

                        <RadioButton
                            android:id="@+id/radiobutton4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no"
                            android:textColor="@color/black"
                            android:textSize="12.0sp" />
                    </RadioGroup>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1.0px"
                    android:background="@drawable/shape_line" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_bg"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <ImageButton
                        android:id="@+id/tijiao_view"
                        
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/tjselector" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
